run the test suite against the latest jdk