@@ -33,7 +33,7 @@ dependencies {
 }
 
 tasks.withType<Test>().configureEach {
-  jvmArgs("-XX:SoftRefLRUPolicyMSPerMB=0")
+  jvmArgs("-XX:SoftRefLRUPolicyMSPerMB=0", "-XX:+EnableDynamicAgentLoading", "-Xshare:off")
   if ("debug" in systemProperties) {
     jvmArgs("-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005")
   }
